test/Fail/ParseErrorTripleDot.agda
-- Andreas, 2024-08-18

f = ...

-- Expected:
-- Parse error: unexpected '...'
